--- a/docs/package.json
+++ b/docs/package.json
@@ -10,7 +10,8 @@
   "repository": "https://github.com/klinglme/developer-documentation/Klingl.me developer docu",
   "scripts": {
     "dev": "vuepress dev src",
-    "build": "vuepress build src"
+    "build": "vuepress build src",
+    "docs:build": "vuepress build docs"
   },
   "license": "MIT",
   "devDependencies": {
